--- a/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/Adress.css
+++ b/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/Adress.css
@@ -7,6 +7,9 @@ h1{
     background-color: transparent;
    
 }
+.input:focus{
+    outline: none;
+}
 .required:after { 
     content:"*"; 
     color: red;
