--- a/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/payment.css
+++ b/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/payment.css
@@ -59,3 +59,65 @@
 .Types>p{
     font-size: 12px;
 }
+
+/* /medium screen/ */
+
+@media screen and (min-width:600px) and (max-width:1000px){
+   *{
+    font-size: 20px;
+   }
+    .paymentsection{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 85%;
+        margin: auto;
+    }
+    .firstpart{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .SecondPart{
+        width: 100%;
+        background-color: white;
+        padding:5px 30px 15px 30px;
+    }
+}
+
+/* small screen */
+
+@media screen and (min-width:100px) and (max-width:599px){
+    
+    .paymentsection{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 85%;
+        margin: auto;
+    }
+    .firstpart{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .SecondPart{
+        width: 100%;
+        background-color: white;
+        padding:5px 30px 15px 30px;
+    }
+    .paymentParts{
+        display: flex;
+        flex-direction: column;
+        gap:20px
+    }
+    .paymentPart1{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+    }
+    .paymentPart2{
+        width:100%;
+    }
+}
