--- a/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/Adress.css
+++ b/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/Adress.css
@@ -46,3 +46,24 @@ h1{
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     border-radius: 3px;
 }
+.currentaddress{
+    width: 100%;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items:  baseline;
+    text-align: left;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    border-radius: 3px;
+}
+.addnewaddress{
+    width:50%;
+    margin-top: 10px;
+    background-color: rgb(30, 171, 30);
+    color: white;
+    font-weight: 600;
+    padding:8px ;
+    font-size: 18px;
+    border-radius: 5px;
+}
