--- a/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/payment.css
+++ b/frontend/limeroad/src/Components/ProductComponents/PaymentComponents/CSS/payment.css
@@ -59,6 +59,10 @@
 .Types>p{
     font-size: 12px;
 }
+.Types:hover{
+    background-color: white;
+    border-left: 5px solid rgb(35, 178, 35);
+}
 
 /* /medium screen/ */
 
