--- a/frontend/limeroad/src/Components/ProductComponents/CartComponents/cart.css
+++ b/frontend/limeroad/src/Components/ProductComponents/CartComponents/cart.css
@@ -25,6 +25,8 @@ h3{
     flex-direction: column;
     gap: 10px;
     width: 50%;
+    overflow-y: scroll;
+    height:520px;
 }
 .selectedProductCard{
     display: flex;
